# restapi/operations/providers/create_provider_configuration_responses.go
@@ -1,0 +1,234 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package providers
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/getlunaform/lunaform/models"
+)
+
+// CreateProviderConfigurationOKCode is the HTTP code returned for type CreateProviderConfigurationOK
+const CreateProviderConfigurationOKCode int = 200
+
+/*CreateProviderConfigurationOK OK
+
+swagger:response createProviderConfigurationOK
+*/
+type CreateProviderConfigurationOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ResourceTfWorkspace `json:"body,omitempty"`
+}
+
+// NewCreateProviderConfigurationOK creates CreateProviderConfigurationOK with default headers values
+func NewCreateProviderConfigurationOK() *CreateProviderConfigurationOK {
+
+	return &CreateProviderConfigurationOK{}
+}
+
+// WithPayload adds the payload to the create provider configuration o k response
+func (o *CreateProviderConfigurationOK) WithPayload(payload *models.ResourceTfWorkspace) *CreateProviderConfigurationOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create provider configuration o k response
+func (o *CreateProviderConfigurationOK) SetPayload(payload *models.ResourceTfWorkspace) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateProviderConfigurationOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateProviderConfigurationCreatedCode is the HTTP code returned for type CreateProviderConfigurationCreated
+const CreateProviderConfigurationCreatedCode int = 201
+
+/*CreateProviderConfigurationCreated Created
+
+swagger:response createProviderConfigurationCreated
+*/
+type CreateProviderConfigurationCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ResourceTfWorkspace `json:"body,omitempty"`
+}
+
+// NewCreateProviderConfigurationCreated creates CreateProviderConfigurationCreated with default headers values
+func NewCreateProviderConfigurationCreated() *CreateProviderConfigurationCreated {
+
+	return &CreateProviderConfigurationCreated{}
+}
+
+// WithPayload adds the payload to the create provider configuration created response
+func (o *CreateProviderConfigurationCreated) WithPayload(payload *models.ResourceTfWorkspace) *CreateProviderConfigurationCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create provider configuration created response
+func (o *CreateProviderConfigurationCreated) SetPayload(payload *models.ResourceTfWorkspace) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateProviderConfigurationCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateProviderConfigurationBadRequestCode is the HTTP code returned for type CreateProviderConfigurationBadRequest
+const CreateProviderConfigurationBadRequestCode int = 400
+
+/*CreateProviderConfigurationBadRequest Bad Request
+
+swagger:response createProviderConfigurationBadRequest
+*/
+type CreateProviderConfigurationBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ServerError `json:"body,omitempty"`
+}
+
+// NewCreateProviderConfigurationBadRequest creates CreateProviderConfigurationBadRequest with default headers values
+func NewCreateProviderConfigurationBadRequest() *CreateProviderConfigurationBadRequest {
+
+	return &CreateProviderConfigurationBadRequest{}
+}
+
+// WithPayload adds the payload to the create provider configuration bad request response
+func (o *CreateProviderConfigurationBadRequest) WithPayload(payload *models.ServerError) *CreateProviderConfigurationBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create provider configuration bad request response
+func (o *CreateProviderConfigurationBadRequest) SetPayload(payload *models.ServerError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateProviderConfigurationBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateProviderConfigurationNotFoundCode is the HTTP code returned for type CreateProviderConfigurationNotFound
+const CreateProviderConfigurationNotFoundCode int = 404
+
+/*CreateProviderConfigurationNotFound Not Found
+
+swagger:response createProviderConfigurationNotFound
+*/
+type CreateProviderConfigurationNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ServerError `json:"body,omitempty"`
+}
+
+// NewCreateProviderConfigurationNotFound creates CreateProviderConfigurationNotFound with default headers values
+func NewCreateProviderConfigurationNotFound() *CreateProviderConfigurationNotFound {
+
+	return &CreateProviderConfigurationNotFound{}
+}
+
+// WithPayload adds the payload to the create provider configuration not found response
+func (o *CreateProviderConfigurationNotFound) WithPayload(payload *models.ServerError) *CreateProviderConfigurationNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create provider configuration not found response
+func (o *CreateProviderConfigurationNotFound) SetPayload(payload *models.ServerError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateProviderConfigurationNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateProviderConfigurationInternalServerErrorCode is the HTTP code returned for type CreateProviderConfigurationInternalServerError
+const CreateProviderConfigurationInternalServerErrorCode int = 500
+
+/*CreateProviderConfigurationInternalServerError Internal Server Error
+
+swagger:response createProviderConfigurationInternalServerError
+*/
+type CreateProviderConfigurationInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ServerError `json:"body,omitempty"`
+}
+
+// NewCreateProviderConfigurationInternalServerError creates CreateProviderConfigurationInternalServerError with default headers values
+func NewCreateProviderConfigurationInternalServerError() *CreateProviderConfigurationInternalServerError {
+
+	return &CreateProviderConfigurationInternalServerError{}
+}
+
+// WithPayload adds the payload to the create provider configuration internal server error response
+func (o *CreateProviderConfigurationInternalServerError) WithPayload(payload *models.ServerError) *CreateProviderConfigurationInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create provider configuration internal server error response
+func (o *CreateProviderConfigurationInternalServerError) SetPayload(payload *models.ServerError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateProviderConfigurationInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
